[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/BattleMenuEdge.png" type="Texture" id=1]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/ActionUI.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ItemUIHover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/RunUI.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ItemUI.png" type="Texture" id=6]
[ext_resource path="res://Sprites/RunUIHover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ActionUIHover.png" type="Texture" id=8]
[ext_resource path="res://UI/BattleMenu.gd" type="Script" id=9]

[node name="BattleMenu" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -37.0
margin_right = 92.0
margin_bottom = -10.0
rect_min_size = Vector2( 184, 24 )
theme = ExtResource( 2 )
custom_constants/separation = 0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftEdge" type="TextureRect" parent="."]
margin_right = 14.0
margin_bottom = 27.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 14.0
margin_right = 170.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 23.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 8.0
margin_right = 140.0
margin_bottom = 19.0

[node name="ActionButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 41.0
margin_bottom = 19.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="ItemButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 45.0
margin_right = 86.0
margin_bottom = 19.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="RunButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 90.0
margin_right = 132.0
margin_bottom = 19.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="RightEdge" type="TextureRect" parent="."]
margin_left = 170.0
margin_right = 184.0
margin_bottom = 27.0
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true

[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ActionButton" to="." method="_on_ActionButton_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ItemButton" to="." method="_on_ItemButton_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/RunButton" to="." method="_on_RunButton_button_down"]
